force-app/main/default/objects/OrderItem/fields/AxleBox__c.field-meta.xml
<CustomField>
    <fullName>AxleBox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Axle Box</label>
    <referenceTo>WheelsetComponent__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>