force-app/main/default/objects/OrderItem/fields/AxLoadType__c.field-meta.xml
<CustomField>
    <fullName>AxLoadType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Axlial Load Type</label>
    <referenceTo>WheelAxlialLoadType__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>