force-app/main/default/objects/OrderItem/fields/CDD__c.field-meta.xml
<CustomField>
    <fullName>CDD__c</fullName>
    <description>Critical Date of Dispatch - the latest date when the shop must dispatch products to delivery to ensure shipping in time.</description>
    <inlineHelpText>Critical Date of Dispatch - the latest date when the shop must dispatch products to delivery to ensure shipping in time.</inlineHelpText>
    <label>CDD</label>
    <type>Date</type>
</CustomField>