force-app/main/default/objects/OrderItem/fields/CDD_Deliv_Date_Delta__c.field-meta.xml
<CustomField>
    <fullName>CDD_Deliv_Date_Delta__c</fullName>
    <formula>IF(
	(FinalCDD__c-FinallyDelivDate__c)&gt;0, &apos;Before of CDD on &apos;+TEXT(FinalCDD__c-FinallyDelivDate__c)+&apos; days&apos;,
		IF(
			(FinalCDD__c-FinallyDelivDate__c)&lt;0, &apos;Later of CDD on &apos;+TEXT(FinalCDD__c-FinallyDelivDate__c)+&apos; days&apos;,
			&apos;Delivered on time&apos;
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ CDD/Deliv.Date</label>
    <type>Text</type>
</CustomField>