force-app/main/default/objects/OrderItem/fields/CDD_Deviation__c.field-meta.xml
<CustomField>
    <fullName>CDD_Deviation__c</fullName>
    <formula>IF(
  (FinalCDD__c-FinallyShippedDate__c)&gt;0, &apos;Before of CDD on &apos;+TEXT(FinalCDD__c-FinallyShippedDate__c)+&apos; days&apos;,
  IF(
    (FinalCDD__c-FinallyShippedDate__c)&lt;0, &apos;Later of CDD on &apos;+TEXT(FinalCDD__c-FinallyShippedDate__c)+&apos; days&apos;, 
	&apos;Shipped in time&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDD Deviation</label>
    <type>Text</type>
</CustomField>