force-app/main/default/objects/OrderItem/fields/CDD_Shipped_Diff__c.field-meta.xml
<CustomField>
    <fullName>CDD_Shipped_Diff__c</fullName>
    <formula>FinalCDD__c-FinallyShippedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDD Shipped Diff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>