force-app/main/default/objects/OrderItem/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating</label>
    <referenceTo>CoatingType__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>