force-app/main/default/objects/OrderItem/fields/ConfirmedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedDeliveryDate__c</fullName>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>