force-app/main/default/objects/OrderItem/fields/Deliv_Delta__c.field-meta.xml
<CustomField>
    <fullName>Deliv_Delta__c</fullName>
    <formula>ShippedQuantity__c -  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ Delivery, t</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>