force-app/main/default/objects/OrderItem/fields/DispatchedQuantity__c.field-meta.xml
<CustomField>
    <fullName>DispatchedQuantity__c</fullName>
    <description>Dispatched quantity of product in metric tons</description>
    <inlineHelpText>Dispatched quantity of product in metric tons</inlineHelpText>
    <label>Shipped (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>