force-app/main/default/objects/OrderItem/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KLW Drawing</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>