force-app/main/default/objects/OrderItem/fields/ERP_LineKey__c.field-meta.xml
<CustomField>
    <fullName>ERP_LineKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ERP_LineKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>