force-app/main/default/objects/OrderItem/fields/ERP_Missing__c.field-meta.xml
<CustomField>
    <fullName>ERP_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Missing</label>
    <type>Checkbox</type>
</CustomField>