force-app/main/default/objects/OrderItem/fields/Estimated_Prod_Balance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Prod_Balance__c</fullName>
    <formula>BalanceForProduction__c -  MonthlyProdPlan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Prod. Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>