force-app/main/default/objects/OrderItem/fields/FinallyDelivDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyDelivDate__c</fullName>
    <label>Finally Deliv. Date</label>
    <type>Date</type>
</CustomField>