force-app/main/default/objects/OrderItem/fields/FinallyProdDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyProdDate__c</fullName>
    <label>Finally Prod. Date</label>
    <type>Date</type>
</CustomField>