force-app/main/default/objects/OrderItem/fields/FinallyShippedDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyShippedDate__c</fullName>
    <label>Finally Shipped Date</label>
    <type>Date</type>
</CustomField>