force-app/main/default/objects/OrderItem/fields/InqQuantuty__c.field-meta.xml
<CustomField>
    <fullName>InqQuantuty__c</fullName>
    <label>Inq. Quantuty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>