force-app/main/default/objects/OrderItem/fields/Is_Placed__c.field-meta.xml
<CustomField>
    <fullName>Is_Placed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Placed</label>
    <type>Checkbox</type>
</CustomField>