force-app/main/default/objects/OrderItem/fields/IsMasterItem__c.field-meta.xml
<CustomField>
    <fullName>IsMasterItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMasterItem</label>
    <type>Checkbox</type>
</CustomField>