force-app/main/default/objects/OrderItem/fields/IsSecondChoiceProduct__c.field-meta.xml
<CustomField>
    <fullName>IsSecondChoiceProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of this field is auto-populated depending on Product Standard, and the field is referenced in the parent object&apos;s rollup summary field. We cannot use a formula field instead, because in that case we couldn&apos;t reference it in rollup-summary field.</description>
    <label>Second Choice Product</label>
    <type>Checkbox</type>
</CustomField>