force-app/main/default/objects/OrderItem/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ITE Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>