force-app/main/default/objects/OrderItem/fields/KLWItemName__c.field-meta.xml
<CustomField>
    <fullName>KLWItemName__c</fullName>
    <formula>IF(OR(ISBLANK(KLWSpec__c),ISBLANK(Drawing__c)), Name__c,
	CASE(TEXT(Order.Region__c),
		&apos;3&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
		&apos;19&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
		&apos;13&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameUKR__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
		KLWSpec__r.SpecBase__r.ProductType__r.Name + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KLW Item Name</label>
    <type>Text</type>
</CustomField>