force-app/main/default/objects/OrderItem/fields/KLWSpec__c.field-meta.xml
<CustomField>
    <fullName>KLWSpec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KLW Specification</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>