force-app/main/default/objects/OrderItem/fields/Mark_1__c.field-meta.xml
<CustomField>
    <fullName>Mark_1__c</fullName>
    <label>Mark 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>