force-app/main/default/objects/OrderItem/fields/NameForDoc__c.field-meta.xml
<CustomField>
    <fullName>NameForDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Name For Doc</label>
    <referenceTo>ProdNameForDoc__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>