force-app/main/default/objects/OrderItem/fields/NameForDoc_Formula__c.field-meta.xml
<CustomField>
    <fullName>NameForDoc_Formula__c</fullName>
    <formula>CASE(TEXT(Order.Region__c),
&apos;3&apos;, KLWSpec__r.NameForDoc__r.NameRU__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name,
&apos;19&apos;, KLWSpec__r.NameForDoc__r.NameRU__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name,
&apos;13&apos;, KLWSpec__r.NameForDoc__r.NameUA__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name,
KLWSpec__r.NameForDoc__r.NameEN__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for Doc Formula</label>
    <type>Text</type>
</CustomField>