force-app/main/default/objects/OrderItem/fields/NameStd__c.field-meta.xml
<CustomField>
    <fullName>NameStd__c</fullName>
    <formula>KLWSpec__r.NameStd__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name acc. to Standard</label>
    <type>Text</type>
</CustomField>