force-app/main/default/objects/OrderItem/fields/ParentItem__c.field-meta.xml
<CustomField>
    <fullName>ParentItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>