force-app/main/default/objects/OrderItem/fields/ParentMaster__c.field-meta.xml
<CustomField>
    <fullName>ParentMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentMaster</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (ParentMaster)</relationshipLabel>
    <relationshipName>Parent_Master_Item</relationshipName>
    <type>Lookup</type>
</CustomField>