force-app/main/default/objects/OrderItem/fields/ProdDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdDetails__c</fullName>
    <label>Product Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>