force-app/main/default/objects/OrderItem/fields/ProdPlan__c.field-meta.xml
<CustomField>
    <fullName>ProdPlan__c</fullName>
    <label>Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>