force-app/main/default/objects/OrderItem/fields/ProdSaleItem__c.field-meta.xml
<CustomField>
    <fullName>ProdSaleItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Sale Item</label>
    <referenceTo>ProdSaleItem__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>