force-app/main/default/objects/OrderItem/fields/ProducedPercentage__c.field-meta.xml
<CustomField>
    <fullName>ProducedPercentage__c</fullName>
    <formula>ProducedQuantity__c / Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produced (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>