force-app/main/default/objects/OrderItem/fields/ProducedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProducedQuantity__c</fullName>
    <description>Produced quantity in metric tons</description>
    <inlineHelpText>Produced quantity in metric tons</inlineHelpText>
    <label>Produced (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>