force-app/main/default/objects/OrderItem/fields/ProductSpecLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Spec Level</label>
    <referenceTo>ProductSpecLevel__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>