force-app/main/default/objects/OrderItem/fields/ProductStandard__c.field-meta.xml
<CustomField>
    <fullName>ProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Standard</label>
    <referenceTo>ProductStandard__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>