force-app/main/default/objects/OrderItem/fields/QuotaType__c.field-meta.xml
<CustomField>
    <fullName>QuotaType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Type</label>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>