force-app/main/default/objects/OrderItem/fields/SCH__c.field-meta.xml
<CustomField>
    <fullName>SCH__c</fullName>
    <label>SCH</label>
    <length>80</length>
    <type>Text</type>
</CustomField>