force-app/main/default/objects/OrderItem/fields/ShippedPercentage__c.field-meta.xml
<CustomField>
    <fullName>ShippedPercentage__c</fullName>
    <formula>ShippedQuantity__c / Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered acc. INCOTERMS (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>