force-app/main/default/objects/OrderItem/fields/ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity__c</fullName>
    <description>Shipped quantity in metric tons</description>
    <inlineHelpText>Shipped quantity in metric tons</inlineHelpText>
    <label>Delivered acc. INCOTERMS (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>