force-app/main/default/objects/OrderItem/fields/ShippedQuantity_pcs__c.field-meta.xml
<CustomField>
    <fullName>ShippedQuantity_pcs__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Drawing__c)),
    NOT(ISBLANK(Drawing__r.WeightKG__c))
  ),
  ShippedQuantity__c * 1000 / Drawing__r.WeightKG__c,
  IF(
    AND(
      NOT(ISBLANK(KLWSpec__c)),
      NOT(ISBLANK(KLWSpec__r.WeightKG__c))
    ),
    ShippedQuantity__c * 1000 / KLWSpec__r.WeightKG__c,
    IF(
      NOT(ISBLANK(Quantity_pcs__c)),
      ShippedQuantity__c / (Quantity / Quantity_pcs__c),
      IF(
        NOT(ISBLANK(Quantity_m__c)),
        ShippedQuantity__c / (Quantity / Quantity_m__c),
        IF(
          NOT(ISBLANK(Quantity_ft__c)),
          ShippedQuantity__c / (Quantity / Quantity_ft__c),
          0
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveredQuantity (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>