force-app/main/default/objects/OrderItem/fields/Shipping_Delta__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Delta__c</fullName>
    <formula>DispatchedQuantity__c -  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ Shipping, t</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>