force-app/main/default/objects/OrderItem/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>