force-app/main/default/objects/OrderItem/fields/TestName__c.field-meta.xml
<CustomField>
    <fullName>TestName__c</fullName>
    <formula>IF(AND(ISBLANK(KLWSpec__c), NOT (ISBLANK(Drawing__c))),
	CASE(TEXT(Order.Region__c),
		&apos;3&apos;, Drawing__r.DrawingBase__r.Product__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos; + Drawing__r.Name + &apos;)&apos;,
		&apos;19&apos;, Drawing__r.DrawingBase__r.Product__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos; + Drawing__r.Name + &apos;)&apos;,
		&apos;13&apos;, Drawing__r.DrawingBase__r.Product__r.NameUKR__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos; + Drawing__r.Name + &apos;)&apos;,
		Drawing__r.DrawingBase__r.Product__r.Name + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos; + Drawing__r.Name + &apos;)&apos;
	),
	IF(AND(NOT (ISBLANK(KLWSpec__c)), ISBLANK(Drawing__c)),
		CASE(TEXT(Order.Region__c),
			&apos;3&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c + &apos; (&apos;+ KLWSpec__r.Name + &apos;)&apos;,
			&apos;19&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c +  &apos; (&apos;+ KLWSpec__r.Name + &apos;)&apos;,
			&apos;13&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameUKR__c +  &apos; (&apos;+ KLWSpec__r.Name + &apos;)&apos;,
			KLWSpec__r.SpecBase__r.ProductType__r.Name + &apos; (&apos;+ KLWSpec__r.Name + &apos;)&apos;
		),
		IF(AND(ISBLANK(KLWSpec__c), ISBLANK(Drawing__c)), Product2.ProductKind__r.Name + &apos; &apos; + WheelSteelGrade__r.Name + &apos; &apos; + WheelProductStandard__r.Name, 
			IF(AND(NOT (ISBLANK(KLWSpec__c)), NOT (ISBLANK(Drawing__c))),
				CASE(TEXT(Order.Region__c),
					&apos;3&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
					&apos;19&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameRUS__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
					&apos;13&apos;, KLWSpec__r.SpecBase__r.ProductType__r.NameUKR__c + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;,
					KLWSpec__r.SpecBase__r.ProductType__r.Name + &apos; &apos; + Drawing__r.AxLoadType__r.Name + &apos; (&apos;+ KLWSpec__r.Name +&apos; / &apos; + Drawing__r.Name + &apos;)&apos;
				), &apos;&apos;
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestName</label>
    <type>Text</type>
</CustomField>