force-app/main/default/objects/OrderItem/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>