force-app/main/default/objects/OrderItem/fields/TubeLengthSize__c.field-meta.xml
<CustomField>
    <fullName>TubeLengthSize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube Length Size</label>
    <referenceTo>TubeLengthSize__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>