force-app/main/default/objects/OrderItem/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>