force-app/main/default/objects/OrderItem/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>