force-app/main/default/objects/OrderItem/fields/WeeklyProdPlan__c.field-meta.xml
<CustomField>
    <fullName>WeeklyProdPlan__c</fullName>
    <label>Weekly Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>