force-app/main/default/objects/OrderItem/fields/WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>WeekNumber__c</fullName>
    <label>Week Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>