force-app/main/default/objects/OrderItem/fields/WeekStartDate__c.field-meta.xml
<CustomField>
    <fullName>WeekStartDate__c</fullName>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>