force-app/main/default/objects/OrderItem/fields/WheelContractLine__c.field-meta.xml
<CustomField>
    <fullName>WheelContractLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Contract Line</label>
    <referenceTo>WheelContractLine__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>