force-app/main/default/objects/OrderItem/fields/WheelDiameter__c.field-meta.xml
<CustomField>
    <fullName>WheelDiameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Diameter</label>
    <referenceTo>WheelDiameter__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>