force-app/main/default/objects/OrderItem/fields/WheelDrawing__c.field-meta.xml
<CustomField>
    <fullName>WheelDrawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Drawing</label>
    <referenceTo>WheelDrawing__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>